--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,7 @@ dependencies:
   objectbox_flutter_libs: 4.0.2
   sqflite: 2.3.3
   webview_flutter: 4.8.0
-  connectivity_plus: 6.0.0
-
+  get: 4.6.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,7 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
