--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: test_moviedb
+name: movie_list
 description: "A List Movie"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -21,10 +21,10 @@ dependencies:
   pretty_dio_logger: 1.4.0
   objectbox: 4.0.2
   objectbox_flutter_libs: 4.0.2
-  sqflite: 2.3.3
   webview_flutter: 4.8.0
   get: 4.6.6
   intl: 0.19.0
+  flutter_dotenv: 5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,8 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
