--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   get_it: 7.2.0
   dio: 5.7.0
   dartz: 0.10.1
-  path_provider: 2.0.11
+  path_provider: 2.1.4
   pretty_dio_logger: 1.4.0
   objectbox: 4.0.2
   objectbox_flutter_libs: 4.0.2
@@ -25,9 +25,7 @@ dependencies:
   get: 4.6.6
   intl: 0.19.0
   flutter_dotenv: 5.1.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: 3.4.1
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
